<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <TextView
        android:id="@+id/itemNameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/item_name"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/quantityLayout"
        app:layout_constraintHorizontal_weight="1" />

    <LinearLayout
        android:id="@+id/quantityLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/increaseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/increase_item_label"
            android:contentDescription="@string/increase_quantity"
            android:focusable="true"
            android:padding="8dp" />

        <Button
            android:id="@+id/decreaseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/decrease_item_label"
            android:contentDescription="@string/decrease_quantity"
            android:focusable="true"
            android:padding="8dp" />

        <TextView
            android:id="@+id/itemQuantityTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity_label"
            android:textSize="18sp"
            android:width="80dp"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>